@@ -3,6 +3,9 @@
                               KijiMR Release Notes
 
 Version 1.0.0-rc61
+  * KIJIMR-52. KijiTableKeyValueStore reader should look up by EntityId, not by
+      String.
+  * KIJIMR-114. Declare various methods of MapReduceJobBuilder as 'final'.
   * KIJIMR-165. XML configuration of file-backed KeyValueStores did not
       properly load Hadoop default properties.
   * KIJIMR-166. Add HBase jars to MapReduce task classpath.
